--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:component": "vitest run tests/component",
     "test:integration": "vitest run tests/integration",
     "test:e2e": "playwright test",
-    "gen:types": "npx supabase gen types typescript --local > src/types/database-generated.types.ts"
+    "gen:types": "npx supabase gen types typescript --local > src/types/database-generated.types.ts",
+    "db:seed": "npx tsx scripts/seed.ts",
+    "db:reset": "npx tsx scripts/seed.ts --reset"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
